--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.2.0",
+    "axios": "^1.13.5",
+    "firebase": "^12.9.0",
     "motion": "^12.34.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
